tests/warnings/unused/simple-unused.expect
---CODE---
1
---STDERR---
error: unused instance: instance is created but never invoked
  ┌─ tests/warnings/unused/simple-unused.fil:8:3
  │
8 │   UnusedAdd := new Add[USED_PARAM];
  │   ^^^^^^^^^ instance defined here

error: unused invocation: output ports on invocation never used
   ┌─ tests/warnings/unused/simple-unused.fil:12:3
   │
12 │   unused_invoke := UsedAdd<'G>();
   │   ^^^^^^^^^^^^^ invocation defined here

error: unused parameter: parameter is defined but never used
  ┌─ tests/warnings/unused/simple-unused.fil:4:7
  │
4 │   let UNUSED_PARAM = 32;
  │       ^^^^^^^^^^^^ parameter defined here

Compilation failed with 3 errors.
Run with --show-models to generate assignments for failing constraints.
